--- a/pages/index.html
+++ b/pages/index.html
@@ -4,29 +4,51 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
-<link rel="stylesheet" href="./css/index.css">
-<!-- <link rel="stylesheet" href=""> -->
+<link rel="stylesheet" href="">
 </head>
 <body>
-  <h1>首页标题123</h1>
-  <div class="box">
-    <h2>一个标题2</h2>
-    <div class="show">
-      <span>一个span标签</span>
-      <p>段落内容。。。</p>
-    </div>
-  </div>
-  <a class="link" href="www.baidu.com">百度</a>
-  <div class="content">
-    <h1 class="content-title">content标题</h1>
-    <div class="content-main">content内容</div>
-  </div>
-  <ul class="list">
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-  </ul>
+  <div id="site-nav">
+    <i class="iconfont icon-zhuye"><a href="https://www.tmall.com/?spm=a2231.7718719.a2226mz.1.4a5c12fenYawTa">天猫首页</a></i>
+    <span>喵，欢迎来天猫国际</span>
+    <a href="html/login.html" id="username">请登录</a>
 
-<script src="./js/index.js"></script>
+    <ul  class="sn-right">
+        <li>
+            <a href="#">我的淘宝</a><em></em>
+            <div class="sbox1">
+                <a href="#">已买到的宝贝</a><br>
+                <a href="#">已买到的宝贝</a>
+            </div>
+        </li>
+        
+        <li><i class="iconfont icon-tianchongxing-"></i><a href="#">购物车</a></li>
+        <li>
+            <a href="#">收藏夹</a><em></em>
+            <div class="sbox2">
+                <a href="#">收藏的宝贝</a><br>
+                <a href="#">收藏的店铺</a>
+            </div>
+        </li>
+        <span>|</span>
+        <li><a href="#">淘宝网</a></li>
+        <li>
+            <a href="#">商家支持</a><em></em>
+            <div class="sbox3">
+                <div>
+                    <h2>商家：</h2>
+                    <a href="#" class="b3">商家中心</a><a href="#">天猫规则</a><br>
+                    <a href="#" class="b3">商家入住</a><a href="#">运营服务</a><br>
+                    <a href="#" class="b3">商家工具</a><a href="#">商家规则</a><br>
+                    <a href="#" class="b3">天猫智库</a><a href="#">喵言喵语</a><br>
+                </div>
+                <div>
+                    <h2>帮助：</h2>
+                    <a href="#" class="b3">帮助中心</a><br>
+                </div>
+            </div>
+        </li>
+    </ul>
+  </div>
 </body>
+<script src="./js/index.js"></script>
 </html>
